# vision

./: .gitignore  Readme.md  a.out  asd.cpp
data/: fusioned_no_color.xyz  test1.asd
src/: CMakeLists.txt  Makefile  calibration.txt  conf.txt  displayer.cpp  displayer.h  imgui.ini  init.cpp  init.h  main  main.cpp
src/3rd/imgui/: imgui_impl_sdl_gl3.cpp
src/colorer/: Makefile  cam_calibration.cpp  cam_calibration.h  colorer  colorer.cpp  colorer.h  conf.txt  main.cpp
src/display/: car_framer.h  color.cpp  color.h  displayer.cpp  displayer.h  gCamera.cpp  gCamera.h  init.cpp  init.h  program.hpp
src/display/shaders/: myFrag.frag  myVert.vert
src/gpu/: Makefile  asd.cu  car_detection.cpp  car_detection.h  cpu_math.cpp  cpu_math.h  cpu_ransac_prep.cpp  cpu_ransac_prep.h  gpu_math.cu  gpu_math.cuh  gpu_math_test.cu  gpu_ransac.cu  gpu_ransac.cuh  grid.cpp  grid.h  try.cu
src/input/: input.cpp  input.h  point.h  point_raw.h
src/object_detection/: car_detection.cpp  car_detection.h  car_framer.cpp  car_framer.h  grid.h
src/planes/: cpu_math.cpp  gpu_math.cu  gpu_math.cuh  gpu_ransac.cu
src/repr/: debug.hpp  input.cpp  input.h  point.cpp  point.h
src/test/: Makefile  all  gpu_math_test.cu  gpu_test  main.cpp  mat_vec.test  mat_vec2.test  mat_vec3.test  test
src/test/testdata/: 1.test
src/test/testdata/2/: a.test
src/util/: Makefile  a.out  cam_calibration.cpp  cam_calibration.h  directory.cpp  directory.h  input.cpp  input.h  point.cpp  point.h  point_raw.h
